# virtual-tukuba-challenge-ros2

./: .gitignore  README.md  plan.md
notes/: 2026-03-26_vtc_ros1_api_inventory.md
vtc_bridge/: CMakeLists.txt  package.xml
vtc_bridge/include/vtc_bridge/: simulator_transport.hpp
vtc_bridge/src/: cageclient_simulator_transport.cpp  mock_simulator_transport.cpp  transport_factory.cpp  vtc_bridge_node.cpp
vtc_bringup/: CMakeLists.txt  package.xml
vtc_bringup/config/: vtc_bridge.params.yaml
vtc_bringup/launch/: minimal_bridge.launch.py
vtc_msgs/: CMakeLists.txt  README.md  package.xml
vtc_msgs/msg/: BridgeDiagnostics.msg  VehicleState.msg
vtc_tools/: package.xml  setup.cfg  setup.py
vtc_tools/vtc_tools/: artifact_summary.py
